OpenCL Fails to Compile (AMD) #46898

Closed
opened 2015-11-30 11:08:52 +01:00 by Erick Tukuniata · 13 comments

System Information
Operating system and graphics card windows 8 AMD Radeon R7 240 +HD 8670D Dual Graphics

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) 3e499c1
Worked: (optional)

Short description of error
Blender fails to print out the error message in the console.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
After active the GPU render while rendering with Cycles and choose a device to use, Blender fails to render and fails to print the errors message in the console. See video below
https://youtu.be/Dtf9PclblfQ

**System Information** Operating system and graphics card windows 8 AMD Radeon R7 240 +HD 8670D Dual Graphics **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 3e499c1 Worked: (optional) **Short description of error** Blender fails to print out the error message in the console. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps After active the GPU render while rendering with Cycles and choose a device to use, Blender fails to render and fails to print the errors message in the console. See video below https://youtu.be/Dtf9PclblfQ

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi Erick, no idea why render does not work but console does not mean Python console.
You can reach system console form Help menu on Windows, iirc, or start Blender from a Windows command shell (CMD).
You don´t really use Blender 2.69?

Cheers, mib

Hi Erick, no idea why render does not work but console does not mean Python console. You can reach system console form Help menu on Windows, iirc, or start Blender from a Windows command shell (CMD). You don´t really use Blender 2.69? Cheers, mib

Thanks Mib, i found the error.
May be some better naming terminology to make the different between python console and operating system console is need here.

Those errors are:

line 20024: error: field type cannot be qualified with named address space Intersection hits[BSSRDF_MAX_HITS]
line 20034: error: field type cannot be qualified with named address space PathRadiance direct_L
line 20039: error: field type cannot be qualified with named address space PathRadiance L [BSSRDF_MAX_HITS]

Is this means that my Oland is not supported?

Thanks Mib, i found the error. May be some better naming terminology to make the different between python console and operating system console is need here. Those errors are: line 20024: error: field type cannot be qualified with named address space Intersection hits[BSSRDF_MAX_HITS] line 20034: error: field type cannot be qualified with named address space PathRadiance direct_L line 20039: error: field type cannot be qualified with named address space PathRadiance L [BSSRDF_MAX_HITS] Is this means that my Oland is not supported?

Oland should work.
Please add exact Blender version, Driver version and make sure your system is up to date.
You can try latest Blender build from: https://builder.blender.org/download
Blender is "portable" only extract anywhere and start from the extracted folder.

Cheers, mib

Oland should work. Please add exact Blender version, Driver version and make sure your system is up to date. You can try latest Blender build from: https://builder.blender.org/download Blender is "portable" only extract anywhere and start from the extracted folder. Cheers, mib

That my own build from today morning, i tried with the build from Blender.org still the same result.
About the Driver version where should i find it?

That my own build from today morning, i tried with the build from Blender.org still the same result. About the Driver version where should i find it?

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Sergey Sharybin was assigned by Thomas Dinges 2015-11-30 21:30:41 +01:00

Might be issues after SSS changes?

Might be issues after SSS changes?
Aaron Carlisle changed title from Cycles GPU Opengl errors message fail to show to OpenCL Fails to Compile (AMD) 2015-11-30 21:53:01 +01:00

This issue was referenced by 607150d058

This issue was referenced by 607150d0581db65f30a5941867bb853e88ae7e20

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks Sergey it is now working :)

Thanks Sergey it is now working :)

This issue was referenced by blender/cycles@21685ed0c3

This issue was referenced by blender/cycles@21685ed0c3c09502911fbbf0a588633c4638f007
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46898
No description provided.