Fix T46898: OpenCL Fails to compile after recent SSS changes